--- a/stories/Formbuilder/buggy_forms/templates/buggy_forms/base.html
+++ b/stories/Formbuilder/buggy_forms/templates/buggy_forms/base.html
@@ -11,11 +11,25 @@
         <h1>Form Builder Application</h1>
         <nav>
             <a href="{% url 'list_forms' %}">Home</a>
-            <a href="{% url 'create_form' %}">Create Form</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'create_form' %}">Create Form</a>
+                <a href="{% url 'logout' %}">Logout</a>
+                <span>Welcome, {{ user.username }}!</span>
+            {% else %}
+                <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'register' %}">Register</a>
+            {% endif %}
         </nav>
     </header>
     
     <main>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert {{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}
         <!-- Page-specific content will go here -->
         {% endblock %}
