--- a/stories/Formbuilder/buggy_forms/templates/registration/login.html
+++ b/stories/Formbuilder/buggy_forms/templates/registration/login.html
@@ -3,23 +3,27 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<div class="login-container">
     <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                {{ field.label_tag }}
-                {{ field }}
-                {% if field.errors %}
-                    <ul class="errorlist">
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+    <!-- {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }}">
+                {{ message }}
             </div>
         {% endfor %}
-        <button type="submit">Login</button>
+    {% endif %} -->
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="id_username">Username:</label>
+            <input type="text" name="username" id="id_username" required>
+        </div>
+        <div class="form-group">
+            <label for="id_password">Password:</label>
+            <input type="password" name="password" id="id_password" required>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Create an account</a></p>
+    <p class="register-link">Don't have an account? <a href="{% url 'register' %}">Create an account</a></p>
+</div>
 {% endblock %}
